Compile modified offending classes instead of patching byte code
This requires more recent Java to compile the suite, but avoids the
complexity of byte code patching.

The original code is kept alongside the patched code for reference.